feat: add full house and project objects to applications API, rename callback to callbacks, add frontend TZ

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -10,5 +10,9 @@ COPY . .
 
 EXPOSE 3000
 
+# Настройка вывода без буферизации для корректного логирования в Docker
+ENV NODE_ENV=development
+ENV PYTHONUNBUFFERED=1
+
 CMD ["npm", "run", "dev"]
 
