Refactor project structure: remove client and admin submodules, add deployment and SSL setup documentation, and update backend configurations. Introduce environment files and Docker support for production.

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,12 @@ client/dist
 admin/dist
 *.local
 
+# Environment files
+.env
+.env.local
+.env.prod
+.env.production
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
