--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.8'
 services:
   postgres:
     image: postgres:15-alpine
-    container_name: realestate_postgres
+    container_name: backend-postgres
     environment:
       POSTGRES_DB: realestate
       POSTGRES_USER: postgres
@@ -19,10 +19,10 @@ services:
       retries: 5
 
   backend:
-    build:
-      context: ./backend
-      dockerfile: Dockerfile
-    container_name: realestate_backend
+    build: .
+    container_name: backend-container
+    ports:
+      - "3000:3000"
     environment:
       NODE_ENV: development
       DB_HOST: postgres
@@ -32,46 +32,12 @@ services:
       DB_PASSWORD: 9.&)YTf(Cq;R^DT
       JWT_SECRET: your-super-secret-jwt-key-change-in-production
       PORT: 3000
-    ports:
-      - "3000:3000"
-    volumes:
-      - ./backend:/app
-      - /app/node_modules
     depends_on:
       postgres:
         condition: service_healthy
-    command: npm run dev
-
-  client:
-    build:
-      context: ./client
-      dockerfile: Dockerfile
-    container_name: realestate_client
-    environment:
-      VITE_API_URL: http://localhost:3000
-    ports:
-      - "5173:5173"
-    volumes:
-      - ./client:/app
-      - /app/node_modules
-    depends_on:
-      - backend
-
-  admin:
-    build:
-      context: ./admin
-      dockerfile: Dockerfile
-    container_name: realestate_admin
-    environment:
-      VITE_API_URL: http://localhost:3000
-    ports:
-      - "5174:5174"
-    volumes:
-      - ./admin:/app
-      - /app/node_modules
-    depends_on:
-      - backend
+    restart: unless-stopped
 
 volumes:
   postgres_data:
+
 
