--- a/package.json
+++ b/package.json
@@ -1,15 +1,28 @@
 {
-  "name": "novostroyki-monorepo",
+  "name": "realestate-backend",
   "version": "1.0.0",
-  "description": "Монорепозиторий агентства новостроек",
-  "private": true,
+  "description": "Backend API for real estate agency",
+  "type": "module",
+  "main": "server.js",
   "scripts": {
-    "dev:client": "cd client && npm run dev",
-    "dev:admin": "cd admin && npm run dev",
-    "dev": "npm run dev:client & npm run dev:admin",
-    "build:client": "cd client && npm run build",
-    "build:admin": "cd admin && npm run build",
-    "build": "npm run build:client && npm run build:admin",
-    "install:all": "cd client && npm install && cd ../admin && npm install"
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "migrate": "node scripts/migrate.js",
+    "migrate-all": "node scripts/migrate-all.js",
+    "seed": "node scripts/seed.js",
+    "test": "node scripts/test-api.js"
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "pg": "^8.11.3",
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^9.0.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "multer": "^1.4.5-lts.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.2"
   }
 }
+
