Enhance SSL certificate management: add SSL_PROTECTION.md documentation, update deploy-update.sh to backup and restore SSL files, modify .gitignore to exclude SSL files, and correct domain names in nginx configuration and setup-ssl.sh for consistency.

--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,12 @@ admin/dist
 .env.prod
 .env.production
 
+# SSL certificates (не коммитить!)
+ssl/
+*.pem
+*.key
+*.crt
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
