--- a/nginx/conf.d/api-ssl.conf
+++ b/nginx/conf.d/api-ssl.conf
@@ -5,7 +5,7 @@ upstream backend {
 # Редирект с HTTP на HTTPS
 server {
     listen 80;
-    server_name admin-doman-gorizont.ru *.admin-doman-gorizont.ru;
+    server_name admin-doman-horizont.ru *.admin-doman-horizont.ru;
 
     # Для Let's Encrypt
     location /.well-known/acme-challenge/ {
@@ -21,7 +21,7 @@ server {
 # HTTPS сервер
 server {
     listen 443 ssl http2;
-    server_name admin-doman-gorizont.ru *.admin-doman-gorizont.ru;
+    server_name admin-doman-horizont.ru *.admin-doman-horizont.ru;
 
     # SSL сертификаты
     ssl_certificate /etc/nginx/ssl/fullchain.pem;
